--- a/Algorithms.html
+++ b/Algorithms.html
@@ -21,7 +21,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
-      <a class="navbar-brand text-dark" href="Landing-page.html">Model Master</a>
+      <a class="navbar-brand text-dark" href="Landing-page.html">CV Task Master</a>
     </div>
   
   </nav>
@@ -57,6 +57,7 @@
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
             <button type="button" class="btn btn-primary" id="openButton" disabled> <a href="Algorithms-Implementation/Face-Detection.html" style="color: white;">Open</a> </button>
           </div>
+
         </div>
       </div>
     </div>
@@ -112,6 +113,29 @@
                   </div>
               </div>
           </div>
+          <div class="col-sm-6 mb-3 mb-sm-0">
+            <div class="card">
+              <div class="card-body">
+                <h5 class="card-title"><p class="" style="color: black; font-size: 25px;">OCR (Optical Character Recognition)</p></h5>
+                <p class="card-text">
+                  <img src="images/5.png" alt="" style="display: block;margin-left: auto;margin-right: auto;width: 50%;" width="250" height="200">
+                </p>
+                <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#imageClassificationModal">Start the OCR (Optical Character Recognition) Project</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-6 mb-3 mb-sm-0">
+            <div class="card">
+              <div class="card-body">
+                <h5 class="card-title"><p class="" style="color: black; font-size: 25px;">Facial Landmark Detection</p></h5>
+                <p class="card-text">
+                  <img src="images/6.jpeg" alt="" style="display: block;margin-left: auto;margin-right: auto;width: 50%;" width="250" height="200">
+                </p>
+                <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#imageSegmentationModal">Start the Facial Landmark Detection Project</a>
+              </div>
+            </div>
+          </div>
+
       </div>
   </div>
 </div>
@@ -166,9 +190,10 @@
             </div>
           </div>
           <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-              <button type="button" class="btn btn-primary"> <a href="Algorithms-Implementation/Face-Detection.html" style="color: white;">Start Project</a> </button>
-          </div>
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary"> <a href="Algorithms-Implementation/Face-Detection.html" style="color: white;">Start Project</a> </button>
+        </div>
+         </div>
       </div>
   </div>
 </div>
@@ -222,9 +247,9 @@
             </div>
           </div>
           <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-              <button type="button" class="btn btn-primary"> <a href="Algorithms-Implementation/Face-Detection.html" style="color: white;">Start Project</a> </button>
-          </div>
+            <h1 class="list-group-item list-group-item-action active" aria-current="true" style="font-size: 15px; text-align: center;">
+              Coming Soon </h1>
+             </div>
       </div>
   </div>
 </div>
@@ -277,7 +302,7 @@
               </div>
             </div>
           </div>
-          <div class="modal-footer">
+          div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
               <button type="button" class="btn btn-primary"> <a href="Algorithms-Implementation/Face-Detection.html" style="color: white;">Start Project</a> </button>
           </div>
@@ -334,40 +359,13 @@
             </div>
           </div>
           <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-              <button type="button" class="btn btn-primary"> <a href="Algorithms-Implementation/Face-Detection.html" style="color: white;">Start Project</a> </button>
+            <h1 class="list-group-item list-group-item-action active" aria-current="true" style="font-size: 15px; text-align: center;">
+              Coming Soon </h1>   
           </div>
       </div>
   </div>
 </div>
 
-<div class="container">
-  <div class="row">
-    <div class="col-sm-6 mb-3 mb-sm-0">
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title"><p class="" style="color: black; font-size: 25px;">OCR (Optical Character Recognition)</p></h5>
-          <p class="card-text">
-            <img src="images/5.png" alt="" style="display: block;margin-left: auto;margin-right: auto;width: 50%;" width="250" height="200">
-          </p>
-          <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#imageClassificationModal">Start the OCR (Optical Character Recognition) Project</a>
-        </div>
-      </div>
-    </div>
-
-    <div class="col-sm-6 mb-3 mb-sm-0">
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title"><p class="" style="color: black; font-size: 25px;">Facial Landmark Detection</p></h5>
-          <p class="card-text">
-            <img src="images/6.jpeg" alt="" style="display: block;margin-left: auto;margin-right: auto;width: 50%;" width="250" height="200">
-          </p>
-          <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#imageSegmentationModal">Start the Facial Landmark Detection Project</a>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
 
 <!-- Image Classification Modal -->
 <div class="modal fade" id="imageClassificationModal" tabindex="-1" role="dialog" aria-labelledby="imageClassificationModalLabel" aria-hidden="true">
@@ -450,7 +448,7 @@
             </label>
           </div>
           <div class="form-check custom-radio">
-            <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" checked>
+            <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" >
             <label class="form-check-label" for="flexRadioDefault2">
               Deep Convolutional Neural Networks (DCNNs)
             </label>
@@ -476,8 +474,8 @@
           
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary"> <a href="Algorithms-Implementation/Face-Detection.html" style="color: white;">Start Project</a> </button>
+        <h1 class="list-group-item list-group-item-action active" aria-current="true" style="font-size: 15px; text-align: center;">
+          Coming Soon </h1> 
       </div>
     </div>
   </div>
@@ -491,7 +489,7 @@
   <div class="container">
       <div class="row">
           <div class="col-md-6">
-              <p>&copy; 2023 Model Master</p>
+              <p>&copy; 2023 CV Task Master</p>
           </div>
           <div class="col-md-6 text-right">
               <a href="#">Privacy Policy</a> | <a href="#">Terms of Service</a>
