--- a/Landing-page.html
+++ b/Landing-page.html
@@ -25,7 +25,7 @@
       <div class="dropdown">
         <button class="btn btn-primary dropdown-toggle" type="button" id="modelMasterDropdown" data-toggle="dropdown"
           aria-haspopup="true" aria-expanded="false">
-          Model Master
+          CV Task Master
         </button>
         <div class="dropdown-menu" aria-labelledby="modelMasterDropdown">
           <!-- Dropdown links -->
@@ -75,7 +75,7 @@
   <div class="containerSection" style="font-family: 'Poppins', sans-serif;
   ">
     <div class="contain-picture ">
-      <h2 class="title text-primary"> Master Model </h2>
+      <h2 class="title text-primary"> CV Task Master </h2>
       <p class=" " style="color: black; font-size: 30px;"><b>Train a computer to recognize your own images, videos, &
           poses.</b></p>
       <p class="text-dark lead"
@@ -95,13 +95,13 @@
   <!-- ABOUT SECTION -->
   <div class="AboutSection bg-white d-flex flex-column justify-content-center align-items-center   " id="About">
     <h1 class="title text-center mb-4 mt-5" style="font-family: 'Poppins', sans-serif;
-  ">About Model Master</h1>
+  ">About CV Task Master</h1>
     <div class=" w-75   rounded p-4">
       <div class=" p-2 d-flex flex-column justify-content-center align-items-center ">
         <img src="images/poster.jpg" alt="">
         <button class="btn btn-primary rounded-circle"
           style="font-size: 40px; margin-top: -200px; width: 80px; height: 80px;">+</button>
-        <p class="w-75 lead " style="margin-top: 150px; text-align: justify;">Model Master is a computer vision website
+        <p class="w-75 lead " style="margin-top: 150px; text-align: justify;">CV Task Master is a computer vision website
           that allows users
           to interact with various computer vision algorithms through an intuitive graphical
           user interface (GUI). It is built using ReactJS for the frontend and Python for the
@@ -114,7 +114,7 @@
   <!-- ALGORITHM SECTION  -->
   <div class="algorithm_section " id="algorithm">
     <p class=" display-4 mt-4 ">Algorithm</p>
-    <p class="text-center lead w-75">Model Master is flexible – use files or capture examples live. It’s respectful <br>
+    <p class="text-center lead w-75">CV Task Master is flexible – use files or capture examples live. It’s respectful <br>
       of the way you work. You can even choose to use it entirely on-device,<br> without any webcam or microphone data
       leaving your computer</p>
     <div class=" algorithm_inner_section ">
@@ -268,7 +268,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6">
-          <p>&copy; 2023 Model Master</p>
+          <p>&copy; 2023 CV Task Master</p>
         </div>
         <div class="col-md-6 text-right">
           <a href="#">Privacy Policy</a> | <a href="#">Terms of Service</a>
