--- a/Algorithms.html
+++ b/Algorithms.html
@@ -21,7 +21,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
-      <a class="navbar-brand text-dark" href="Landing-page.html">CV Task Master</a>
+      <a class="navbar-brand text-dark" href="Landing-page.html">AutoVision</a>
     </div>
   
   </nav>
@@ -160,7 +160,7 @@
               <div class="form-check custom-radio">
                 <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
                 <label class="form-check-label" for="flexRadioDefault1">
-                  YOLO
+                  Eigenface
                 </label>
               </div>
               <div class="form-check custom-radio">
@@ -273,38 +273,38 @@
               <div class="form-check custom-radio">
                 <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
                 <label class="form-check-label" for="flexRadioDefault1">
-                  Convolutive Neural Networks (CNNs)
+                  Region-based Convolutional Neural
                 </label>
               </div>
               <div class="form-check custom-radio">
                 <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" checked>
                 <label class="form-check-label" for="flexRadioDefault2">
-                  Deep Neural Networks (DNN)
+                  Faster R-CNN
                 </label>
               </div>
               <div class="form-check custom-radio">
                 <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault3">
                 <label class="form-check-label" for="flexRadioDefault3">
-                  Recurrent Neural Networks (RNN)
+                  YOLO
                 </label>
               </div>
               <div class="form-check custom-radio">
                 <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault4">
                 <label class="form-check-label" for="flexRadioDefault4">
-                  Support Vector Machines (SVM)
+                  Deep Neural Networks (DNN)
                 </label>
               </div>
               <div class="form-check custom-radio">
                 <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault5">
                 <label class="form-check-label" for="flexRadioDefault5">
-                  Histogram of Oriented Gradients (HOG)
+                  Convolutional Neural Networks (CNN)
                 </label>
               </div>
             </div>
           </div>
-          div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-              <button type="button" class="btn btn-primary"> <a href="Algorithms-Implementation/Face-Detection.html" style="color: white;">Start Project</a> </button>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary"> <a href="Algorithms-Implementation/Face-Detection.html" style="color: white;">Start Project</a> </button>
           </div>
       </div>
   </div>
@@ -489,7 +489,7 @@
   <div class="container">
       <div class="row">
           <div class="col-md-6">
-              <p>&copy; 2023 CV Task Master</p>
+              <p>&copy; 2023 AutoVision</p>
           </div>
           <div class="col-md-6 text-right">
               <a href="#">Privacy Policy</a> | <a href="#">Terms of Service</a>
