--- a/Algorithms.html
+++ b/Algorithms.html
@@ -9,7 +9,8 @@
 <link rel="stylesheet" href="css/bootstrap.min.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 <link rel="stylesheet" href="Algorithms.css">
-  <title>ModelMaster - Algorithms</title>
+<link rel="icon" href="favicon.ico" type="image/x-icon">
+  <title>AutoVision - Algorithms</title>
 </head>
 
 <body style="font-family: 'Poppins', sans-serif;
@@ -21,7 +22,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
-      <a class="navbar-brand text-dark" href="Landing-page.html">AutoVision</a>
+      <a class="navbar-brand text-dark" href="index.html">AutoVision</a>
     </div>
   
   </nav>
