--- a/FAQS.html
+++ b/FAQS.html
@@ -8,14 +8,15 @@
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="FAQS.css">
-    <title>FAQs</title>
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <title>AutoVision-FAQs</title>
 </head>
 
 <body>
    <!-- Navbar Section -->
 <nav class="navbar navbar-expand-lg bg-white navbar-light shadow fixed-top">
    <div class="container">
-       <a class="navbar-brand" href="Landing-page.html">AutoVision</a>
+       <a class="navbar-brand" href="index.html">AutoVision</a>
        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
            <span class="navbar-toggler-icon"></span>
        </button>
