--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="landing-page.css">
-  <title>ModelMaster - Computer Vision</title>
+  <title>AutoVision - Computer Vision</title>
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 
 <body style="font-family: 'Poppins', sans-serif;
@@ -62,7 +63,7 @@
           <form class="form-inline">
             <button type="button" class="btn btn-primary">Login</button>
             <button type="button" class="btn btn-success ml-2">Signup</button>
-            <img class="rounded-circle ml-2" src="images/Logo.png" width="40px" height="40px" alt="">
+            <!-- <img class="rounded-circle ml-2" src="images/Logo.png" width="40px" height="40px" alt=""> -->
           </form>
         </div>
       </div>
@@ -76,8 +77,7 @@
   ">
     <div class="contain-picture ">
       <h2 class="title text-primary"> AutoVision </h2>
-      <p class=" " style="color: black; font-size: 30px;"><b>Train a computer to recognize your own images, videos, &
-          poses.</b></p>
+      <p class=" " style="color: black; font-size: 30px;"><b>An Automatic Machine Learning Tool for Computer vision tasks</b></p>
       <p class="text-dark lead"
         style="font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">A
         fast, easy way to create machine learning models for your sites, apps, and more – no expertise or coding
@@ -87,7 +87,8 @@
 
     </div>
     <div class="picture ">
-      <video src="images/prediction.mp4" autoplay="autoplay" controls loop="loop" width="" alt=""></video>
+      <!-- <video src="images/prediction.mp4" autoplay="autoplay" controls loop="loop" width="" alt=""></video> -->
+      <img src="images/front-img.jpg" height="400" alt="#">
     </div>
   </div>
   <!-- END OF HERO SECTION -->
@@ -186,7 +187,7 @@
               • Recurrent Neural Networks (RNNs)<br>
               • BERT<br>
               • Connectionist Temporal Classification (CTC)<br>
-              • Support Vector Machines (SVMs)
+              • Pytesseract
             </p>
           </div>
         </div>
