--- a/Algorithms-Implementation/Face-Detection.html
+++ b/Algorithms-Implementation/Face-Detection.html
@@ -4,6 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Teachable Machine</title>
+  <link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="css/font-awesome.min.css">
+<link rel="stylesheet" href="css/bootstrap.min.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
   <style>
     body {
@@ -26,10 +30,88 @@
     .card-text {
       color: #666;
     }
+    .navbar-brand {
+    font-size: 30px; /* Increase navbar brand font size */
+    font-weight: bold;
+    color: #333;
+  }
+
+  .title {
+    text-align: center;
+    font-size: 36px;
+    color: #333;
+    margin-top: 30px;
+  }
+
+  .container {
+    text-align: center;
+    margin-top: 20px;
+  }
+
+  html {
+  height: 100%;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
+}
+
+.container.mt-5 {
+  flex: 1;
+}
+body {
+      background-color: #f8f9fa;
+      margin: 0; /* Remove default margin */
+      padding: 0; /* Remove default padding */
+    }
+
+    .wrapper {
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh; /* Minimum height of the viewport */
+    }
+
+    .card-container {
+      margin: 0; /* Remove margin to shift cards to the left */
+      margin-top: 5%;
+    }
+
+    /* Add margin-top to your navbar to avoid overlap with content */
+    .navbar {
+      margin-top: 30px;
+    }
+
+    /* Style your footer to stay at the bottom */
+    footer {
+      margin-top: auto; /* Push footer to the bottom */
+      background-color: #343a40;
+      color: white;
+      padding: 10px 0;
+    }
+    .centered-card {
+      max-width: 300px; /* Adjust the card's width as needed */
+    }
+
+   
   </style>
 </head>
 <body>
-  <div class="container mt-5">
+   <!-- Navbar Section -->
+   <br><br>
+   <nav class="navbar navbar-expand-lg bg-white navbar-light  shadow fixed-top">
+     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+       <span class="navbar-toggler-icon"></span>
+     </button>
+     <div class="collapse navbar-collapse" id="collapsibleNavbar">
+       <a class="navbar-brand text-dark" href="../index.html">AutoVision</a>
+     </div>
+   
+   </nav>
+   <!-- Navbar End -->
+ 
+  <div class="container-fluid mt-5">
     <div id="cardContainer">
       <!-- The initial card -->
       <div class="row">
@@ -37,7 +119,7 @@
           <div class="card">
             <div class="card-body">
               <input type="text" class="card-title mb-2" placeholder="Class 1">
-              <p class="card-text">Add image samples.</p>
+              <p class="card-text">Import dataset or you create new here</p>
               <div>
                 <button class="btn btn-primary" onclick="startWebcam(this)">Start Webcam</button>
                 <label class="btn btn-secondary">
@@ -54,6 +136,42 @@
       </div>
     </div>
   </div>
+  <div style="
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+    background-color: #f8f9fa;" class="centered-card">
+    <div class="card text-center">
+      <div class="card-header">
+        Featured
+      </div>
+      <div class="card-body">
+        <h5 class="card-title">Special title treatment</h5>
+        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+        <a href="#" class="btn btn-primary">Go somewhere</a>
+      </div>
+      <div class="card-footer text-muted">
+        2 days ago
+      </div>
+    </div>
+  </div>
+  
+
+     <!-- Footer Section -->
+<footer class="bg-dark text-light py-4">
+  <div class="container">
+      <div class="row">
+          <div class="col-md-6">
+              <p>&copy; 2023 AutoVision</p>
+          </div>
+          <div class="col-md-6 text-right">
+              <a href="#">Privacy Policy</a> | <a href="#">Terms of Service</a>
+          </div>
+      </div>
+  </div>
+</footer>
 
 <script>
 const cardContainer = document.getElementById('cardContainer');
@@ -66,7 +184,7 @@ function createCard() {
         <div class="card">
           <div class="card-body">
             <input type="text" class="card-title mb-2" placeholder="Class">
-            <p class="card-text">Add image samples.</p>
+            <p class="card-text">Create new or Import your dataset</p>
             <div>
               <button class="btn btn-primary" onclick="startWebcam(this)">Start Webcam</button>
               <label class="btn btn-secondary">
@@ -80,6 +198,8 @@ function createCard() {
       </div>
     </div>
   `;
+  
+  
 
  // Create a new DOM element from the newCard string
  const newCardElement = document.createRange().createContextualFragment(newCard);
@@ -127,5 +247,9 @@ addCardButton.addEventListener('click', createCard);
       cardBody.appendChild(uploadedImage);
     }
   </script>
+
+
+<!-- End of Footer Section -->
+
 </body>
 </html>
